# MYBOT-ROS2

./: .gitmodules  README.md
custom_message/: CMakeLists.txt  package.xml
custom_message/msg/: AutonomousModeFeedback.msg  BuildRoute.msg  Date.msg  DateTime.msg  FollowRoute.msg  GoalList.msg  GoalPose.msg  GoalState.msg  PatrolConfig.msg  PurePose.msg  RobotPose.msg  Route.msg  RouteList.msg  SaveGoal.msg  Shift.msg  ShuttleConfig.msg
goal_database/: goal_list.json  patrol_config.json
goal_executor/: package.xml  setup.cfg  setup.py
goal_executor/goal_executor/: goal_executor.py  operation_state_machine.py  save_goal_executor.py  test_goal_executor.py
goal_executor/launch/: goal_executor.launch.py
mybot_bringup/: CMakeLists.txt  package.xml
mybot_bringup/config/: navslam_params.yaml  neo_navigation_params.yaml
mybot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
mybot_bringup/rviz/: rviz_navslam.rviz
mybot_control/: CMakeLists.txt  mybot_control.xml  package.xml
mybot_control/bringup/config/: mybot_controller.yaml
mybot_control/bringup/launch/: mybot_hw_control.launch.py
mybot_control/config/: rplidar_a1.yaml
mybot_control/description/launch/: view_robot.launch.py
mybot_control/description/ros2_control/: mybot_ros2_control.xacro
mybot_control/description/urdf/: mybot.urdf.xacro  mybot_description.urdf.xacro
mybot_control/hardware/: diffbot_system.cpp
mybot_control/hardware/include/mybot_control/: arduino_comms.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
mybot_controller/: CMakeLists.txt  package.xml
mybot_controller/config/: mybot_controllers.yaml
mybot_controller/launch/: controller.launch.py
mybot_controller/script/: teleop_keyboard.py
mybot_controller/src/: mybot_convert.cpp
mybot_description/: CMakeLists.txt  package.xml
mybot_description/launch/: display.launch.py  gazebo.launch.py
mybot_description/rviz/: display.rviz
mybot_description/urdf/: common_properties.xacro  mybot.urdf.xacro  mybot_gazebo.xacro  mybot_ros2_control.xacro
mybot_firmware/: CMakeLists.txt  package.xml
mybot_hardware/: CMakeLists.txt  mybot_hardware.xml  package.xml
mybot_hardware/include/mybot_hardware/: arduino_comms.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
mybot_hardware/launch/: hardware_interface.launch.py
mybot_hardware/src/: diffbot_system.cpp
mybot_localization/: CMakeLists.txt  package.xml
mybot_localization/config/: amcl.yaml
mybot_localization/launch/: global_localization.launch.py
mybot_navigation/: CMakeLists.txt  package.xml
mybot_navigation/config/: nav2_params.yaml
mybot_navigation/filter/: keepout_mask.pgm  keepout_mask.yaml  speed_mask.pgm  speed_mask.yaml
mybot_navigation/launch/: navigation2.launch.py
mybot_navigation/maps/real_house/: map.pgm  map.yaml
mybot_slam/: CMakeLists.txt  package.xml
mybot_slam/launch/: slam.launch.py
mybot_slam/maps/demo_small_house/: map.pgm  map.yaml
mybot_slam/rviz/: rviz_slam.rviz
nav2_costmap_filters_demo/params/: speed_params.yaml
neo_localization2/: CMakeLists.txt  package.xml
neo_localization2/include/neo_localization/: Solver.h  Util.h
neo_localization2/launch/: test_setup.launch.py  test_setup.yaml
neo_localization2/maps/real_house/: map.pgm
neo_localization2/src/: neo_localization_node.cpp
